# nigeria-crop-yield-geoAI

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  streamlit_app.py
configs/: config.yaml
data/: README.md
data/processed/: README.md  dataset_metadata.json  modeling_dataset.csv  nbs_crop_yield_state_zone_2022_2023.csv  state_metadata.csv
data/raw/nbs/: README.md  nass_report_tables_2022_2023.xlsx
docs/: data_sources.md  index.html  model_card_template.md  project_design.md  site.js  styles.css
models/: best_tuned_model_metadata_notebook07.json
notebooks/: 01_data_audit_and_nbs_parsing.ipynb  02_crop_yield_eda_by_zone_and_season.ipynb  03_climate_data_download_and_feature_engineering.ipynb  04_sentinel2_feature_engineering.ipynb  05_modeling_dataset_and_leakage_control.ipynb  06_baseline_and_machine_learning_models.ipynb  07_hyperparameter_tuning_and_model_selection.ipynb  08_error_analysis_explainability_and_reporting.ipynb  README.md  requirements-geo.txt
reports/: README.md
scripts/: 00_download_nbs_tables.py  01_download_climate_nasa_power.py  02_download_sentinel2_planetary_computer.py  03_build_features.py  04_train_models.py  05_evaluate_and_explain.py  run_pipeline.py
src/nigeria_crop_yield/: __init__.py  settings.py
src/nigeria_crop_yield/data/: climate.py  nbs_parser.py  sentinel2.py  validation.py
tests/: test_feature_builder.py  test_nbs_parser.py
(+6 files in other folders)
