[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nigeria-crop-yield-geoai"
version = "0.1.0"
description = "Crop yield prediction across Nigerian agroecological zones using NBS agricultural survey data, climate covariates, and Sentinel-2 features."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Peter Adepoju"}]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "streamlit>=1.36",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "requests>=2.31",
    "joblib>=1.3",
    "rich>=13.7",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
